[package]
name = "fastq_levenshtein_automata"
version = "0.1.0"
authors = ["otsukaresamaja <christophersugai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
flate2 = "1.0.18"
seq_io = "0.3.1"
fst = {version = "0.4.5", features = ["levenshtein"]}